Setup/k8s/kafka/testclient.yaml
apiVersion: v1
kind: Pod
metadata:
    name: testclient
    namespace: default
spec:
    containers:
        - name: kafka
          image: solsson/kafka:0.11.0.0
          command:
              - sh
              - -c
              - "exec tail -f /dev/null"
